[1.11.1]
- [BREAKING CHANGE] Added #touchCancelled to InputProcessor interface, see #6871.
- [BREAKING CHANGE] Android: Immersive mode is now true by default. Set `useImmersiveMode` config to `false` to disable it. 
- [BREAKING CHANGE] iOS: `hideHomeIndicator` set to `false` by default (was `true`).
- [BREAKING CHANGE] iOS: `screenEdgesDeferringSystemGestures` set to `UIRectEdge.All` by default (was `UIRectEdge.None`).
- [BREAKING CHANGE] Actor#localToAscendantCoordinates throws an exception if the specified actor is not an ascendant.
- [BREAKING CHANGE] WidgetGroup#hit first validates the layout.
- iOS: Add new MobiVM MetalANGLE backend
- API Addition: Added Haptics API with 4 different Input#vibrate() methods with complete Android and iOS implementations.
- Fix: Fixed Android and iOS touch cancelled related issues, see #6871.
- Javadoc: Add "-use" flag to javadoc generation
- Android: gdx-setup now uses AGP 7.0.4 and SDK 31, requiring Android Studio Arctic Fox or IntelliJ IDEA 2021.3 and JDK 11.
- libGDX is now built using Java 11 due to new Android requirements. The rest of libGDX can still be built with JDK 8 and runtime compatibility of libGDX projects should be unaffected.
- Fixed glViewport when using HdpiMode.Logical with the LWJGL3 backend.
- Added Stage#actorRemoved to fire exit events just before an actor is removed.
- ScrollPane#setScrollingDisabled avoids invalidate() if nothing changed.
- Fixed incorrect ScrollPane#scrollTo.
- API Fix: The cursor can now be catched on Android.

[1.11.0]
- [BREAKING CHANGE] iOS: Increased min supported iOS version to 9.0. Update your Info.plist file if necessary.
- [BREAKING CHANGE] Removed Maven and Ant build systems. libGDX is now solely built with Gradle. See https://libgdx.com/dev/from-source/ for updated build instructions.
- [BREAKING CHANGE] Android Moved natives loading out of static init block, see #5795
- [BREAKING CHANGE] Linux: Shared libraries are now built on Ubuntu 18.04 (up from Ubuntu 16.04)